--- a/app.html
+++ b/app.html
@@ -44,19 +44,24 @@
       }));
     };
 
-    var args = (function getArgs() {
-      var args = {};
-      var url = location.href;
-      if (url.indexOf("?") === -1) {
-        return args;
+    var args = (function getUrlParamObj() {
+      var params = window.location.search.substring(1).split('&');
+      var result = {};
+
+      for (var i = 0, len = params.length; i < len; i++) {
+        var param = params[i].split('=');
+        var paramLen = param.length;
+
+        if (paramLen > 0) {
+          if ((paramLen === 1) && (param[0].length > 0)) {
+            result[param[0]] = null;
+          } else if (paramLen === 2) {
+            result[param[0]] = decodeURIComponent(param[1]);
+          }
+        }
       }
 
-      var items = url.split("?")[1].split("&");
-      for (var i = 0, l = items.length; i < l; i++) {
-        var splits = items[i].split("=");
-        args[splits[0]] = splits[1];
-      }
-      return args;
+      return result;
     })();
 
     var options = {
